[gd_scene load_steps=5 format=3 uid="uid://bu848huj4bjxb"]

[ext_resource type="Script" uid="uid://drmbfdea550jn" path="res://scripts/skill_tree.gd" id="1_tnam6"]
[ext_resource type="Texture2D" uid="uid://cw8r1qd08c4wi" path="res://assets/inventoryicons.png" id="2_a302t"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tyjg3"]
atlas = ExtResource("2_a302t")
region = Rect2(1.56273, 1.88958, 47.9163, 47.476)

[sub_resource type="AtlasTexture" id="AtlasTexture_51bdh"]
atlas = ExtResource("2_a302t")
region = Rect2(50.2291, 0.556047, 49.3794, 49.444)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tnam6")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -305.0
offset_top = -253.0
offset_bottom = 143.0
grow_horizontal = 0
grow_vertical = 2
color = Color(0.408329, 0.408329, 0.408329, 1)

[node name="Button" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 51.0
offset_top = 32.0
offset_right = 106.0
offset_bottom = 87.0
icon = SubResource("AtlasTexture_tyjg3")

[node name="Button2" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 179.0
offset_top = 33.0
offset_right = 236.0
offset_bottom = 90.0
tooltip_text = "Sword Specializtion
++ damage"
icon = SubResource("AtlasTexture_51bdh")

[node name="Button3" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 49.0
offset_top = 135.0
offset_right = 104.0
offset_bottom = 190.0
icon = SubResource("AtlasTexture_tyjg3")

[node name="Button4" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 177.0
offset_top = 136.0
offset_right = 234.0
offset_bottom = 193.0
tooltip_text = "Sword Specializtion
++ damage"
icon = SubResource("AtlasTexture_51bdh")

[node name="Button5" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 49.0
offset_top = 242.0
offset_right = 104.0
offset_bottom = 297.0
icon = SubResource("AtlasTexture_tyjg3")

[node name="Button6" type="Button" parent="ColorRect"]
layout_mode = 0
offset_left = 177.0
offset_top = 243.0
offset_right = 234.0
offset_bottom = 300.0
tooltip_text = "Sword Specializtion
++ damage"
icon = SubResource("AtlasTexture_51bdh")

[connection signal="button_down" from="ColorRect/Button" to="." method="_on_button_button_down"]
[connection signal="button_down" from="ColorRect/Button2" to="." method="_on_button_2_button_down"]
[connection signal="button_down" from="ColorRect/Button3" to="." method="_on_button_3_button_down"]
[connection signal="button_down" from="ColorRect/Button4" to="." method="_on_button_4_button_down"]
[connection signal="button_down" from="ColorRect/Button5" to="." method="_on_button_5_button_down"]
[connection signal="button_down" from="ColorRect/Button6" to="." method="_on_button_6_button_down"]
